...
          borderRadius: BorderRadius.circular(32.0)),
      child: Row(
        children: [
          Expanded(
            flex: 65,
            child: TextFormField(
              key: const Key('SearchInputKey'),
              onChanged: onChangeText,
              keyboardType: TextInputType.text,
              autofocus: false,
              style: TextStyle(
                fontSize: 16.0,
                fontFamily: Font.FONT_FAMILY,
...
              children: [
                Text('only tags',
                    style: TextStyle(
                        fontFamily: Font.FONT_FAMILY,
                        fontWeight: FontWeight.w600,
                        color: Colors.white)),
                Checkbox(
                  key: const Key('Checkbox'),
                  checkColor: Colors.white, // color of tick Mark
                  activeColor: Colors.grey,
                  value: isOnlyTags,
                  onChanged: onChangeCheckbox,
                ),
...
