...
          ),
          clipBehavior: Clip.antiAlias,
          child: Column(
            children: [
              ListTile(
                trailing: IconButton(
                    key: const Key('DeleteCardIcon'),
                    color: Colors.white,
                    icon: Icon(Icons.close),
                    onPressed: onDelete),
                title: Text(title,
                    style: TextStyle(
                        color: Colors.white,
...
